==> STMicroelectronics/STM32CubeC5/examples/ll/tim/delayed_break/NUCLEO-C562RE/generated/hal/mx_tim1.c <==
/**
  ******************************************************************************
  * @file           : mx_tim1.c
  * @brief          : Peripheral initialization
  ******************************************************************************
  * @attention
  *
  * Copyright (c) 2026 STMicroelectronics.
  * All rights reserved.
  *
  * This software is licensed under terms that can be found in the mx_stm32c5xx_hal_drivers_license.md file
  * in the same directory as the generated code.
  * If no mx_stm32c5xx_hal_drivers_license.md file comes with this software, it is provided AS-IS.
  *
  ******************************************************************************
  */

/* Includes ------------------------------------------------------------------*/
#include "mx_tim1.h"

/* Private typedef -----------------------------------------------------------*/
/* Private define ------------------------------------------------------------*/
/* Private macro -------------------------------------------------------------*/
/* Private variables ---------------------------------------------------------*/
/* Private functions prototype------------------------------------------------*/
/* Exported variables by reference--------------------------------------------*/

/* Exported function definition ----------------------------------------------*/
/******************************************************************************/
/* Exported functions for TIM1 in LL layer */
/******************************************************************************/

TIM_TypeDef *mx_tim1_init(void)
{
  LL_APB2_GRP1_EnableClock(LL_APB2_GRP1_PERIPH_TIM1);

  /* Timer configuration to reach the output frequency at 10 kHz */
  LL_TIM_SetPrescaler(TIM1, 143);
  /* LL_TIM_SetCounterMode(TIM1, LL_TIM_COUNTERMODE_UP); */ /* Configuration matches register reset state at startup. */
  LL_TIM_SetAutoReload(TIM1, 99);
  /* LL_TIM_SetClockDivision(TIM1, LL_TIM_CLOCKDIVISION_DIV1); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_SetClockDivision2(TIM1, LL_TIM_CLOCKDIVISION2_DIV1); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_SetClockSource(TIM1, LL_TIM_CLK_INTERNAL); */ /* Configuration matches register reset state at startup. */

  /* Channel 1 Configuration */
  /* LL_TIM_OC_SetPolarity(TIM1, LL_TIM_CHANNEL_CH1, LL_TIM_OCPOLARITY_HIGH); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetIdleState(TIM1, LL_TIM_CHANNEL_CH1, LL_TIM_OCIDLESTATE_RESET); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetOverrideState(TIM1, LL_TIM_CHANNEL_CH1, LL_TIM_OCOVERRIDE_RESET); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetBreakMode(TIM1, LL_TIM_CHANNEL_CH1, LL_TIM_OCBREAKMODE_IMMEDIATE); */ /* Configuration matches register reset state at startup. */

  /* Compare Unit 1 Configuration */
  LL_TIM_OC_SetMode(TIM1, LL_TIM_CHANNEL_CH1, LL_TIM_OCMODE_PWM1);
  LL_TIM_OC_SetCompareValue(TIM1, LL_TIM_OC_COMPARE_UNIT_1, 90);
  /* Channel 2 Configuration */
  /* LL_TIM_OC_SetPolarity(TIM1, LL_TIM_CHANNEL_CH2, LL_TIM_OCPOLARITY_HIGH); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetIdleState(TIM1, LL_TIM_CHANNEL_CH2, LL_TIM_OCIDLESTATE_RESET); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetOverrideState(TIM1, LL_TIM_CHANNEL_CH2, LL_TIM_OCOVERRIDE_RESET); */ /* Configuration matches register reset state at startup. */
  LL_TIM_OC_SetBreakMode(TIM1, LL_TIM_CHANNEL_CH2, LL_TIM_OCBREAKMODE_DELAY1);

  /* Compare Unit 2 Configuration */
  LL_TIM_OC_SetMode(TIM1, LL_TIM_CHANNEL_CH2, LL_TIM_OCMODE_PWM1);
  LL_TIM_OC_SetCompareValue(TIM1, LL_TIM_OC_COMPARE_UNIT_2, 90);
  /* Channel 3 Configuration */
  /* LL_TIM_OC_SetPolarity(TIM1, LL_TIM_CHANNEL_CH3, LL_TIM_OCPOLARITY_HIGH); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetIdleState(TIM1, LL_TIM_CHANNEL_CH3, LL_TIM_OCIDLESTATE_RESET); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_OC_SetOverrideState(TIM1, LL_TIM_CHANNEL_CH3, LL_TIM_OCOVERRIDE_RESET); */ /* Configuration matches register reset state at startup. */
  LL_TIM_OC_SetBreakMode(TIM1, LL_TIM_CHANNEL_CH3, LL_TIM_OCBREAKMODE_DELAY2);

  /* Compare Unit 3 Configuration */
  LL_TIM_OC_SetMode(TIM1, LL_TIM_CHANNEL_CH3, LL_TIM_OCMODE_PWM1);
  LL_TIM_OC_SetCompareValue(TIM1, LL_TIM_OC_COMPARE_UNIT_3, 90);

  /* Update Event Management */
  /* LL_TIM_SetUpdateSource(TIM1, LL_TIM_UPDATESOURCE_REGULAR); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_EnableUpdateEvent(TIM1); */ /* Configuration matches register reset state at startup. */

  /* Break Configuration */
  LL_TIM_EnableAutomaticOutput(TIM1);

  LL_TIM_SetOffStates(TIM1, LL_TIM_OSSI_ENABLE, LL_TIM_OSSR_ENABLE);

  /* Break Configuration */
  /* LL_TIM_ConfigBRK(TIM1, LL_TIM_BREAK_POLARITY_LOW, LL_TIM_BREAK_FILTER_FDIV1, LL_TIM_BREAK_AFMODE_INPUT); */ /* Configuration matches register reset state at startup. */
  LL_TIM_SetBreakDelay(TIM1, LL_TIM_BREAK_DELAY1, 60);
  LL_TIM_SetBreakDelay(TIM1, LL_TIM_BREAK_DELAY2, 120);

  /* Break Input Sources Configuration */
  /* LL_TIM_SetBreakInputSourcePolarity(TIM1, LL_TIM_BREAK_INPUT_1, LL_TIM_TIM1_BRK_GPIO, LL_TIM_BREAK_INPUT_SRC_NONINVERTED); */ /* Configuration matches register reset state at startup. */
  /* LL_TIM_EnableBreakInputSource(TIM1, LL_TIM_BREAK_INPUT_1, LL_TIM_TIM1_BRK_GPIO); */ /* Configuration matches register reset state at startup. */

  /* Enable Break 1 Input */
  LL_TIM_EnableBreakInput(TIM1, LL_TIM_BREAK_INPUT_1);

  /* ### TIM1 GPIO Configuration ########################### */

  /* GPIO Clocks activation */
  LL_AHB2_GRP1_EnableClock(LL_AHB2_GRP1_PERIPH_GPIOA);

  /**
    [GPIO Pin] ------> [Signal Name] ------> [Labels]

       PA8     ------>   TIM1_CH1   ------>  PA8
       PA9     ------>   TIM1_CH2   ------>  PA9
       PA10    ------>   TIM1_CH3   ------>  PA10
    **/

  /* Configure IO output speed (Low, Medium, High or Very-High) */
  /* LL_GPIO_SetPinSpeed(PA8_PORT, PA8_PIN, LL_GPIO_SPEED_FREQ_LOW); */ /* Configuration matches register reset state at startup. */
  /* LL_GPIO_SetPinSpeed(PA9_PORT, PA9_PIN, LL_GPIO_SPEED_FREQ_LOW); */ /* Configuration matches register reset state at startup. */
  /* LL_GPIO_SetPinSpeed(PA10_PORT, PA10_PIN, LL_GPIO_SPEED_FREQ_LOW); */ /* Configuration matches register reset state at startup. */

  /* Configure IO output type (Push-Pull or Open-Drain) */
  /* LL_GPIO_SetPinOutputType(GPIOA, PA8_PIN | PA9_PIN | PA10_PIN, LL_GPIO_OUTPUT_PUSHPULL); */ /* Configuration matches register reset state at startup. */

  /* Activate the Pull-up, Pull-down resistor, or No pull for the current IO */
  /* LL_GPIO_SetPinPull(PA8_PORT, PA8_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */
  /* LL_GPIO_SetPinPull(PA9_PORT, PA9_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */
  /* LL_GPIO_SetPinPull(PA10_PORT, PA10_PIN, LL_GPIO_PULL_NO); */ /* Configuration matches register reset state at startup. */

  /* Configure the Alternate Function in current IO */
  LL_GPIO_SetAFPin_8_15(PA8_PORT, PA8_PIN, LL_GPIO_AF_1);
  LL_GPIO_SetAFPin_8_15(PA9_PORT, PA9_PIN, LL_GPIO_AF_1);
  LL_GPIO_SetAFPin_8_15(PA10_PORT, PA10_PIN, LL_GPIO_AF_1);

  /* Configure IO direction mode (Input, Output, Alternate or Analog) */
  LL_GPIO_SetPinMode(PA8_PORT, PA8_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetPinMode(PA9_PORT, PA9_PIN, LL_GPIO_MODE_ALTERNATE);
  LL_GPIO_SetPinMode(PA10_PORT, PA10_PIN, LL_GPIO_MODE_ALTERNATE);

  /**
    [GPIO Pin] ------> [Signal Name] ------> [Labels]

       PA6     ------>   TIM1_BKIN   ------>  PA6
    **/

  /* Configure IO output speed (Low, Medium, High or Very-High) */
  /* LL_GPIO_SetPinSpeed(PA6_PORT, PA6_PIN, LL_GPIO_SPEED_FREQ_LOW); */ /* Configuration matches register reset state at startup. */

  /* Configure IO output type (Push-Pull or Open-Drain) */
  /* LL_GPIO_SetPinOutputType(PA6_PORT, PA6_PIN, LL_GPIO_OUTPUT_PUSHPULL); */ /* Configuration matches register reset state at startup. */

  /* Activate the Pull-up, Pull-down resistor, or No pull for the current IO */
  LL_GPIO_SetPinPull(PA6_PORT, PA6_PIN, LL_GPIO_PULL_UP);

  /* Configure the Alternate Function in current IO */
  LL_GPIO_SetAFPin_0_7(PA6_PORT, PA6_PIN, LL_GPIO_AF_1);

  /* Configure IO direction mode (Input, Output, Alternate or Analog) */
  LL_GPIO_SetPinMode(PA6_PORT, PA6_PIN, LL_GPIO_MODE_ALTERNATE);

  return TIM1;
}

void mx_tim1_deinit(void)
{
  LL_APB2_GRP1_DisableClock(LL_APB2_GRP1_PERIPH_TIM1);

  LL_APB2_GRP1_ForceReset(LL_APB2_GRP1_PERIPH_TIM1);
  LL_APB2_GRP1_ReleaseReset(LL_APB2_GRP1_PERIPH_TIM1);

  /* ### GPIO deinitialization of TIM1: TIM1_CH1,TIM1_CH2,TIM1_CH3 ########################### */

  /* Configure IO in Analog Mode */
  LL_GPIO_SetPinMode(PA8_PORT, PA8_PIN, LL_GPIO_MODE_ANALOG);
  LL_GPIO_SetPinMode(PA9_PORT, PA9_PIN, LL_GPIO_MODE_ANALOG);
  LL_GPIO_SetPinMode(PA10_PORT, PA10_PIN, LL_GPIO_MODE_ANALOG);

  /* Configure the default Alternate Function in current IO */
  LL_GPIO_SetAFPin_8_15(PA8_PORT, PA8_PIN, LL_GPIO_AF_0);
  LL_GPIO_SetAFPin_8_15(PA9_PORT, PA9_PIN, LL_GPIO_AF_0);
  LL_GPIO_SetAFPin_8_15(PA10_PORT, PA10_PIN, LL_GPIO_AF_0);

  /* Configure the default value for IO Speed */
  LL_GPIO_SetPinSpeed(PA8_PORT, PA8_PIN, LL_GPIO_SPEED_FREQ_LOW);
  LL_GPIO_SetPinSpeed(PA9_PORT, PA9_PIN, LL_GPIO_SPEED_FREQ_LOW);
  LL_GPIO_SetPinSpeed(PA10_PORT, PA10_PIN, LL_GPIO_SPEED_FREQ_LOW);

  /* Configure the default value IO Output Type */
  LL_GPIO_SetPinOutputType(GPIOA, PA8_PIN | PA9_PIN | PA10_PIN, LL_GPIO_OUTPUT_PUSHPULL);

  /* Deactivate the Pull-up and Pull-down resistor for the current IO */
  LL_GPIO_SetPinPull(PA8_PORT, PA8_PIN, LL_GPIO_PULL_NO);
  LL_GPIO_SetPinPull(PA9_PORT, PA9_PIN, LL_GPIO_PULL_NO);
  LL_GPIO_SetPinPull(PA10_PORT, PA10_PIN, LL_GPIO_PULL_NO);

  /* Reset the IO output state */
  LL_GPIO_WriteOutputPin(PA8_PORT, PA8_PIN | PA9_PIN | PA10_PIN, LL_GPIO_PIN_RESET);

  /* ### GPIO deinitialization of TIM1: TIM1_BKIN ########################### */

  /* Configure IO in Analog Mode */
  LL_GPIO_SetPinMode(PA6_PORT, PA6_PIN, LL_GPIO_MODE_ANALOG);

  /* Configure the default Alternate Function in current IO */
  LL_GPIO_SetAFPin_0_7(PA6_PORT, PA6_PIN, LL_GPIO_AF_0);

  /* Configure the default value for IO Speed */
  LL_GPIO_SetPinSpeed(PA6_PORT, PA6_PIN, LL_GPIO_SPEED_FREQ_LOW);

  /* Configure the default value IO Output Type */
  LL_GPIO_SetPinOutputType(PA6_PORT, PA6_PIN, LL_GPIO_OUTPUT_PUSHPULL);

  /* Deactivate the Pull-up and Pull-down resistor for the current IO */
  LL_GPIO_SetPinPull(PA6_PORT, PA6_PIN, LL_GPIO_PULL_NO);

  /* Reset the IO output state */
  LL_GPIO_WriteOutputPin(PA6_PORT, PA6_PIN, LL_GPIO_PIN_RESET);
}
